# voidbrowser

./: CLAUDE.md  LICENSE  PRIVACY.md  README.md  index.html  package.json  pnpm-lock.yaml
.claude/: hooks.json
.github/workflows/: build.yml
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/resources/: fingerprint_shield.js
src-tauri/resources/filter_lists/: easylist.txt  easyprivacy.txt
src-tauri/src/: commands.rs  lib.rs  main.rs
src-tauri/src/browser/: mod.rs  navigation.rs  tabs.rs  webview.rs
src-tauri/src/privacy/: ad_blocker.rs  cookie_policy.rs  fingerprint.rs  https_only.rs  mod.rs
src-tauri/src/storage/: bookmarks.rs  crypto.rs  database.rs  history.rs  mod.rs  settings.rs
src/components/browser/: AddressBar.tsx  FindBar.tsx  NavigationControls.tsx  Tab.tsx  TabBar.tsx
src/components/privacy/: ShieldIcon.tsx  SitePermissions.tsx
src/components/settings/: SettingsPage.tsx
src/components/shared/: ContextMenu.tsx
src/components/sidebar/: BookmarkPanel.tsx  HistoryPanel.tsx  Sidebar.tsx
src/lib/: ipc.ts
src/stores/: bookmarkStore.ts  navigationStore.ts  privacyStore.ts  settingsStore.ts  sidebarStore.ts  tabStore.ts
src/styles/: global.css
