[package]
name = "void-browser"
version = "0.1.0"
description = "A zero-tracking privacy browser"
authors = ["VoidBrowser"]
edition = "2021"

[lib]
name = "void_browser_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["unstable"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
url = "2"
uuid = { version = "1", features = ["v4"] }
tokio = { version = "1", features = ["full"] }
adblock = "0.12"

[target.'cfg(windows)'.dependencies]
webview2-com = "0.38"
windows = { version = "0.61", features = [
    "Win32_System_WinRT",
    "Web_Http",
] }
