[package]
name = "void-browser"
version = "0.1.0"
description = "A zero-tracking privacy browser"
authors = ["VoidBrowser"]
edition = "2021"

[lib]
name = "void_browser_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["unstable"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
url = "2"
uuid = { version = "1", features = ["v4"] }
tokio = { version = "1", features = ["full"] }
adblock = "0.12"
rand = "0.8"
rusqlite = { version = "0.32", features = ["bundled-sqlcipher-vendored-openssl"] }
chacha20poly1305 = "0.10"
argon2 = "0.5"
zeroize = { version = "1.8", features = ["derive"] }
keyring = { version = "3", features = ["crypto-rust"] }
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tempfile = "3"

[target.'cfg(windows)'.dependencies]
webview2-com = "0.38"
windows = { version = "0.61", features = [
    "Win32_System_WinRT",
    "Web_Http",
] }
